--- a/src/lang/langue_en_US.properties
+++ b/src/lang/langue_en_US.properties
@@ -10,7 +10,7 @@ pop.relance.prog = Impossible de relancer le programme, veuillez le fermer manue
 ##########################################################
 #################### Menu ################################
 ##########################################################
-menu.fichier = Fichier
+menu.fichier = Files
 menu.fichier.export = Exporter en xls
 menu.fichier.import = Importer depuis xls
 menu.fichier.save = Enregistrer la plage
@@ -72,6 +72,7 @@ param.dbext = Db Externe
 param.licen = Licence
 param.autre = Autres Param\u00e8tres
 param.rac = Cr\u00e9er les racourcis
+
 
 
 #################### FEN PARAM MAIL ######################
