--- a/src/lang/langue_fr_FR.properties
+++ b/src/lang/langue_fr_FR.properties
@@ -72,6 +72,8 @@ param.dbext = Db Externe
 param.licen = Licence
 param.autre = Autres Param\u00e8tres
 param.rac = Cr\u00e9er les racourcis
+param.langue = Langue
+param.langue.change = Les param\u00e8tres ont bien \u00e9t\u00e9 enregistr\u00e9s, si vous avez modifi\u00e9 la langue, veuillez red\u00e9marrer le programme
 
 
 
@@ -96,7 +98,7 @@ param.recap.active = Activer l'envoie des recap.
 param.recap.heure = Heure du mail (hh:mm)
 
 #################### FEN SITES ###########################
-sites.nouveau.titre = Enregistrer le site
+site.nouveau.titre = Enregistrer le site
 
 #################### FEN PARAM DBEXT ######################
 param.dbext.titre = Param\u00e8tres DB Externe
