--- a/src/lang/langue_en_US.properties
+++ b/src/lang/langue_en_US.properties
@@ -11,20 +11,20 @@ pop.relance.prog = Impossible de relancer le programme, veuillez le fermer manue
 #################### Menu ################################
 ##########################################################
 menu.fichier = Files
-menu.fichier.export = Exporter en xls
-menu.fichier.import = Importer depuis xls
-menu.fichier.save = Enregistrer la plage
-menu.fichier.sites = Gestion des sites
-menu.fichier.maj = Mise \u00e0 jour
-menu.fichier.quitter = Quitter
+menu.fichier.export = Export Xls
+menu.fichier.import = Import from xls
+menu.fichier.save = Save
+menu.fichier.sites = Site management
+menu.fichier.maj = Update
+menu.fichier.quitter = Quit
 
-menu.param = Param\u00e8tres
-menu.param.param = Param\u00e8tres
-menu.param.option = Options
+menu.param = Settings
+menu.param.param = General
+menu.param.option = Option
 
 menu.autre = ?
-menu.autre.apropos = A propos
-menu.autre.site = Site Internet
+menu.autre.apropos = Referring
+menu.autre.site = Website
 menu.autre.test = Test
 menu.autre.changelog = Changelog
 
@@ -35,54 +35,56 @@ menu.autre.changelog = Changelog
 ##########################################################
 
 #################### FenMain ############################
-PingOuin.version = PingOuin version
-main.start = Lancer
-main.stop = Arr\u00eater
-main.error.255 = Veuillez entrer une valeur inf\u00e9rieure \u00e0 255
-main.error.0 = Veuillez entrer une valeur sup\u00e9rieure \u00e0 0;
-main.menu.nav = Ouvir dans le navigateur
-main.menu.sup = Supprimer
+PingOuin.version = PingOuin release
+main.start = Start
+main.stop = Stop
+main.error.255 = Please enter a value less than 255 
+main.error.0 = Please enter a value greater than 0
+main.menu.nav = Open in browser
+main.menu.sup = Delete
 main.menu.hist = Historique
-main.trie = Trier par 
+main.trie = Sort by
 main.trie.ip = IP
-main.trie.nom = Nom
-main.ajout = Ajouter des ip
-main.ping.delais = D\u00e9lais entre 2 pings
-main.modif = Modifier
-main.btn.nav = Ouvrir navigateur
-main.btn.clear = Tout effacer
-main.btn.efface = Effacer IP
+main.trie.nom = Name
+main.ajout = Add ip
+main.ping.delais = Delays between 2 pings
+main.modif = Change
+main.btn.nav = Open in browser
+main.btn.clear = Delete all
+main.btn.efface = Delete IP
 
 
 
 #################### FEN CHANGELOG########################
-changelog.titre = Changements
+changelog.titre = Changes
 
 #################### FEN SITES ###########################
-sites.titre = Gestion des sites
+sites.titre = Site management
 
 
 #################### FEN PARAM ###########################
-param.titre = Param\u00e8tres
-param.site = Nom du site
-param.mail = Mail \u00e0 envoyer
-param.mail.param = Envoie de mails
-param.recap = Envoie de recap
-param.dbext = Db Externe
-param.licen = Licence
-param.autre = Autres Param\u00e8tres
-param.rac = Cr\u00e9er les racourcis
+param.titre = Setting
+param.site = Site name
+param.mail = Mail to send
+param.mail.param = Sending emails
+param.recap = Send summary
+param.dbext = Db Extern
+param.licen = License
+param.autre = Other settings
+param.rac = Create the shortcuts
+param.langue = Language
+param.langue.change = The settings have been saved, if you have changed the language, please restart the program
 
 
 
 #################### FEN PARAM MAIL ######################
-param.mail.titre = Param\u00e8tres e-mail
+param.mail.titre = e-mail settings
 param.mail.port = Port
-param.mail.user = Utilisateur
+param.mail.user = User
 param.mail.mail = e-mail
-param.mail.serveur = Serveur
-param.mail.pass = Pass
-param.mail.envoie = Envoyer un e-mail en cas de perte ou de retour d'un h\u00f4te.
+param.mail.serveur = Server
+param.mail.pass = Password
+param.mail.envoie = Send an email in case of loss or return of a host.
 
 #################### FEN PARAM RECAP ######################
 param.recap.lun = lun
@@ -92,91 +94,91 @@ param.recap.jeu = jeu
 param.recap.ven = ven
 param.recap.sam = sam
 param.recap.dim = dim
-param.recap.active = Activer l'envoie des recap.
-param.recap.heure = Heure du mail (hh:mm)
+param.recap.active = Activate the sending of summaries
+param.recap.heure = Email time (hh:mm)
 
 #################### FEN SITES ###########################
-sites.nouveau.titre = Enregistrer le site
+site.nouveau.titre = Save site
 
 #################### FEN PARAM DBEXT ######################
-param.dbext.titre = Param\u00e8tres DB Externe
-param.dbext.address = Adresse
+param.dbext.titre = External DB Parameters
+param.dbext.address = Address
 param.dbext.port = Port
-param.dbext.nom = Nom
+param.dbext.nom = Name
 param.dbext.user = User
-param.dbext.pass = Pass
-param.dbext.delais = D\u00e9lais
-param.dbext.purge = Purger la base
+param.dbext.pass = Password
+param.dbext.delais = Delays
+param.dbext.purge = Purge the base
 
 #################### FEN PARAM LICENCE ######################
-param.licence.titre = Licence
+param.licence.titre = License
 param.licence.code = Code
-param.licence.licence = Licence
-param.licence.active = Votre logiciel est activ\u00e9.
-param.licence.inactive = Vous n'avez pas de licence valide.
-param.licence.pop = La licence \u00e0 \u00e9t\u00e9 mise \u00e0 jour, le programme va \u00eatre relanc\u00e9.
+param.licence.licence = License
+param.licence.active = Your software is activated.
+param.licence.inactive = You do not have a valid license.
+param.licence.pop = The license has been updated, the program will be relaunched.
 
 #################### FEN PARAM OPTIONS ######################
-param.option.titre = Options
-param.option.mail.plantage = Envoie des mails en cas de plantage
-param.option.mail.recap = Envoie des mails recap
+param.option.titre = Setting
+param.option.mail.plantage = Sends emails in the event of a crash
+param.option.mail.recap = Sends summary emails
 param.option.pop = Popup
-param.option.archive = Ecriture des archives
-param.option.dbext.plantage = Db Externe en cas de plantage
-param.option.dbext.recap = Db Extener recap
+param.option.archive = Writing archives
+param.option.dbext.plantage = External DB in the event of a crash
+param.option.dbext.recap = External DB summary
 
 ##########################################################
 #################### PackFUNC ############################
 ##########################################################
 
 #################### FUNC EXPORT #########################
-func.export.choix = Choisisser ou enregistrer votre fichier
-func.export.error = Une erreur est survenue
-func.export.pop1 = Votre fichier \u00e0 bien \u00e9t\u00e9 cr\u00e9e dans 
+func.export.choix = Choose or save your file
+func.export.error = An error has occurred
+func.export.pop1 = Your file has been created in 
 func.export.pop2 = \\export.xls
 
 #################### FUNC IMPORT ########################
-func.import.choix = Choisissez votre fichier
+func.import.choix = Choose your file
 
 #################### FUNC Ip ############################
-func.ip.ajoutok = La plage IP \u00e0 bien \u00e9t\u00e9 ajout\u00e9e
+func.ip.ajoutok = The IP range has been added
 
 #################### FUNC MAJ ###########################
-func.maj.conn = Impossible de se connecter au service, v\u00e9rifiez votre connection internet
-func.maj.version = Choisissez la version \u00e0 installer
-func.maj.version2 = Verions disponibles
-func.maj.ok = La nouvelles version \u00e0 \u00e9t\u00e9 t\u00e9l\u00e9charg\u00e9e, le programme vas \u00eatre relanc\u00e9.
-func.maj.error = Impossible de relancer le programme, veuillez le faire manuellement.
-func.maj.no = Pas de nouvelles versions disponible pour le moment.
+func.maj.conn = Unable to connect to the service, check your internet connection
+func.maj.version = Choose the version to install
+func.maj.version2 = Available versions
+func.maj.ok = The new version has been downloaded, the program will be relaunched.
+func.maj.error = Unable to restart the program, please do it manually.
+func.maj.no = No new versions available for the moment.
 
 ##########################################################
 #################### PackThread ##########################
 ##########################################################
 
 #################### THREAD MAIL #########################
-thread.mail.messageperte1 = Bonjour, \n \n En date du 
-thread.mail.messageperte2 = Les h\u00f4tes suivants sont tomb\u00e9s sur le site 
-thread.mail.messageperte3 = \n \n Cordialement,
-thread.mail.objetperte = Perte de connexion sur : 
-thread.mail.messageretour1 = Les h\u00f4tes suivants sont revenus sur le site 
-thread.mail.objetretour = Retour de connexion sur 
+thread.mail.messageperte1 = Hello, \ n \ n As of 
+thread.mail.messageperte2 = The following hosts have fallen on the site
+thread.mail.messageperte3 = \ n \ n Regards,
+thread.mail.objetperte = Loss of connection on:
+thread.mail.messageretour1 = The following guests have returned to the site
+thread.mail.objetretour = Connection feedback on
 
 #################### THREAD MAIL RECAP ###################
-thread.mailrecap.message1 = - L'adresse IP 
-thread.mailrecap.message2 = nomm\u00e9e 
+thread.mailrecap.message1 = - IP address
+thread.mailrecap.message2 = named 
 thread.mailrecap.message3 = est 
 thread.mailrecap.messageok = OK
 thread.mailrecap.messagehs = HS
-thread.mailrecap.objet = Etat de site 
-thread.mailrecap.objet2 = au
+thread.mailrecap.objet = Site status
+thread.mailrecap.objet2 = at
 
 #################### THREAD MAJ #########################
-thread.maj.dispo = Mise \u00e0 jour disponible
-thread.maj.ok = A jour
+thread.maj.dispo = Update available
+thread.maj.ok = Up to date
 
 #################### THREAD POPUP #######################
-thread.popup.hs = Sont HS : \n
-thread.popup.ok = Sont OK : \n
+thread.popup.hs = Are HS : \n
+thread.popup.ok = Are OK : \n
 
 #################### THREAD PREPAAJ #####################
-thread.prepaj.ok = La plage IP \u00e0 bien \u00e9t\u00e9 ajout\u00e9e
+thread.prepaj.ok = The IP range has been added
