--- a/src/lang/langue.properties
+++ b/src/lang/langue.properties
@@ -6,7 +6,6 @@ btn.supr = Supprimer
 licence.invalide = Vous devez disposer d'une licence valide.
 pop.relance.prog = Impossible de relancer le programme, veuillez le fermer manuellement
 
-
 ##########################################################
 #################### Menu ################################
 ##########################################################
@@ -27,8 +26,6 @@ menu.autre.apropos = A propos
 menu.autre.site = Site Internet
 menu.autre.test = Test
 menu.autre.changelog = Changelog
-
-
 
 ##########################################################
 #################### PackMain ############################
@@ -52,15 +49,13 @@ main.modif = Modifier
 main.btn.nav = Ouvrir navigateur
 main.btn.clear = Tout effacer
 main.btn.efface = Effacer IP
-
-
+main.nbrHs = Nombre de tentative
 
 #################### FEN CHANGELOG########################
 changelog.titre = Changements
 
 #################### FEN SITES ###########################
 sites.titre = Gestion des sites
-
 
 #################### FEN PARAM ###########################
 param.titre = Param\u00e8tres
@@ -74,7 +69,6 @@ param.autre = Autres Param\u00e8tres
 param.rac = Cr\u00e9er les racourcis
 param.langue = Langue
 param.langue.change = Les param\u00e8tres ont bien \u00e9t\u00e9 enregistr\u00e9s, si vous avez modifi\u00e9 la langue, veuillez red\u00e9marrer le programme
-
 
 #################### FEN PARAM MAIL ######################
 param.mail.titre = Param\u00e8tres e-mail
