--- a/src/lang/langue_en_US.properties
+++ b/src/lang/langue_en_US.properties
@@ -6,7 +6,6 @@ btn.supr = Supprimer
 licence.invalide = Vous devez disposer d'une licence valide.
 pop.relance.prog = Impossible de relancer le programme, veuillez le fermer manuellement
 
-
 ##########################################################
 #################### Menu ################################
 ##########################################################
@@ -27,8 +26,6 @@ menu.autre.apropos = Referring
 menu.autre.site = Website
 menu.autre.test = Test
 menu.autre.changelog = Changelog
-
-
 
 ##########################################################
 #################### PackMain ############################
@@ -52,15 +49,13 @@ main.modif = Change
 main.btn.nav = Open in browser
 main.btn.clear = Delete all
 main.btn.efface = Delete IP
-
-
+main.nbrHs = Number of attempts
 
 #################### FEN CHANGELOG########################
 changelog.titre = Changes
 
 #################### FEN SITES ###########################
 sites.titre = Site management
-
 
 #################### FEN PARAM ###########################
 param.titre = Setting
@@ -74,8 +69,6 @@ param.autre = Other settings
 param.rac = Create the shortcuts
 param.langue = Language
 param.langue.change = The settings have been saved, if you have changed the language, please restart the program
-
-
 
 #################### FEN PARAM MAIL ######################
 param.mail.titre = e-mail settings
@@ -156,9 +149,9 @@ func.maj.no = No new versions available for the moment.
 ##########################################################
 
 #################### THREAD MAIL #########################
-thread.mail.messageperte1 = Hello, \ n \ n As of 
+thread.mail.messageperte1 = Hello, \n \n As of 
 thread.mail.messageperte2 = The following hosts have fallen on the site
-thread.mail.messageperte3 = \ n \ n Regards,
+thread.mail.messageperte3 = \n \n Regards,
 thread.mail.objetperte = Loss of connection on:
 thread.mail.messageretour1 = The following guests have returned to the site
 thread.mail.objetretour = Connection feedback on
