--- a/src/lang/langue.properties
+++ b/src/lang/langue.properties
@@ -50,6 +50,7 @@ main.btn.nav = Ouvrir navigateur
 main.btn.clear = Tout effacer
 main.btn.efface = Effacer IP
 main.nbrHs = Nombre de tentative
+main.nbrHote = Nombre d'h\u00f4tes \u00e0 scanner
 
 #################### FEN CHANGELOG########################
 changelog.titre = Changements
