--- a/src/lang/langue_en_US.properties
+++ b/src/lang/langue_en_US.properties
@@ -50,6 +50,7 @@ main.btn.nav = Open in browser
 main.btn.clear = Delete all
 main.btn.efface = Delete IP
 main.nbrHs = Number of attempts
+main.nbrHote = Number of hosts to scan
 
 #################### FEN CHANGELOG########################
 changelog.titre = Changes
